<resources>
    <string name="app_name">파크스템</string>
    <string name="toolbar_name">P A R K S T E M</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="activity_input_car_register">차량 등록</string>

    <string name="action_splash">스플래쉬 이미지</string>
    <string name="action_login">로그인</string>
    <string name="action_assign">회원가입</string>
    <string name="action_mobile">모바일</string>
    <string name="action_car_register">차량등록</string>
    <string name="action_card_register">카드등록</string>
    <string name="action_card_new_card">새카드</string>
    <string name="action_home">홈</string>
    <string name="action_mobile_ticket">모바일 주차권</string>
    <string name="action_purchase_ticket">주차권 구매내역</string>
    <string name="action_first_screen">초기화면</string>

    <string name="popup_clause_title">약관</string>
    <string name="popup_clause_content">어차피 이거 동의 안하면 이용 못합니다.\n 그냥 체크하셈여 ㅇㅇ</string>
    <string name="popup_hipass_explain_title">하이패스란 무엇인가</string>
    <string name="popup_hipass_explain_content">빠른-통과</string>
    <string name="popup_setting_clause_title">서비스 정책 및 약관</string>
    <string name="popup_setting_clause_content">서비스 정책 및 약관</string>

    <string name="popup_sign_out_title">회원 탈퇴</string>
    <string name="popup_sign_out_content">정말로 탈퇴하시겠습니까?</string>

    <string name="facebook_app_id">1822115311350886</string>
    <string name="kakao_app_key">a4d442851f490c7c2390b18c99a9b682</string>

    <string name="on_back_button_pressed_message">\'뒤로\'버튼 한번 더 누르시면 종료됩니다.</string>

</resources>
