<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_splash"
        android:orderInCategory="100"
        android:title="@string/action_splash"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/action_login"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_assign"
        android:orderInCategory="100"
        android:title="@string/action_assign"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mobile"
        android:orderInCategory="100"
        android:title="@string/action_mobile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_car_register"
        android:orderInCategory="100"
        android:title="@string/action_car_register"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_card_register"
        android:orderInCategory="100"
        android:title="@string/action_card_register"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_card_new_card"
        android:orderInCategory="100"
        android:title="@string/action_card_new_card"
        app:showAsAction="never" />
</menu>
